# rust-tweeter

./: .eslintrc.js  .gitignore  CHANGELOG.md  package-lock.json  package.json  turbo.json
apps/api/: .env.example  Cargo.toml  README.md  auth.http  base.http  package.json
apps/api/entity/: Cargo.toml
apps/api/migration/: Cargo.toml
apps/api/migrations/2022-09-19-094323_user/: up.sql
apps/api/migrations/2022-10-14-131341_tweet/: up.sql
apps/api/migrations/2022-10-14-131710_comment/: up.sql
apps/api/migrations/2022-10-14-131842_tweet-like/: down.sql  up.sql
apps/api/migrations/2022-10-14-132619_comment-like/: down.sql  up.sql
apps/api/src/: main.rs  schema.rs
apps/api/src/controllers/: mod.rs
apps/api/src/controllers/auth/: mod.rs
apps/api/src/controllers/tweet/: mod.rs
apps/api/src/controllers/user/: mod.rs
apps/api/src/errors/: mod.rs
apps/api/src/graphql/: mod.rs  mutation_root.rs  query_root.rs
apps/api/src/graphql/mutations/: tweet.rs
apps/api/src/graphql/queries/: hello.rs  mod.rs  tweet.rs  user.rs
apps/api/src/modules/: mod.rs
apps/api/src/modules/auth/: jwt.rs  jwt_service.rs  mod.rs
apps/api/src/modules/comment/: mod.rs
apps/api/src/modules/comment_like/: mod.rs
apps/api/src/modules/common/: service.rs
apps/api/src/modules/tweet/: mod.rs  service.rs
apps/api/src/modules/tweet_like/: mod.rs
apps/api/src/modules/user/: mod.rs  model.rs  service.rs
apps/api/src/routes/: graphql.rs  mod.rs
apps/api/src/routes/api/: mod.rs
apps/api/src/routes/auth/: login.rs  me.rs  mod.rs  refresh_token.rs  register.rs
apps/api/src/utils/: database.rs  mod.rs  random.rs
apps/web/: .eslintrc.js  codegen.ts  next.config.js  package.json  postcss.config.js  tsconfig.json
apps/web/src/: config.tsx
apps/web/src/app/: layout.tsx  pages.tsx
apps/web/src/components/components/: Avatar.tsx  CreateTweet.tsx  IconText.tsx  InlineFollow.tsx  Logo.tsx  NavItem.tsx  RoundedBlock.tsx  TagInfo.tsx  Tweet.tsx  TweetPost.tsx
apps/web/src/components/components/forms/: Button.tsx  (+1 more)
apps/web/src/components/layouts/: FollowWidget.tsx  Index.tsx  InfoSidebar.tsx  NavSidebar.tsx  ProfileHero.tsx  SearchWidget.tsx  TrendsForYouWidget.tsx
apps/web/src/gql/: gql.ts  graphql.ts
apps/web/src/libs/api/: common.ts  tweetApi.ts
apps/web/src/pages/: _app.tsx  explore.tsx  index.tsx  profile.tsx
apps/web/src/utils/: helpers.ts
