[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.17", features = ["headers"] }
dotenvy = "0.15.6"
headers = "0.3.8"
jsonwebtoken = "8.1.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-graphql = { version = "4.0.16", features = ["chrono"] }
async-graphql-axum = "4.0.16"
diesel = { version = "2.0.2", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4.22", features = ["serde"] }
r2d2 = "0.8.10"
rust-argon2 = "1.0.0"
rand = "0.8.5"
axum-macros = "0.2.3"
anyhow = "1.0.66"
tower-http = { version = "0.3.4", features = ["cors"] }
